# adaptation.xorg.driver.xserver-xorg-misc

./: COPYING  Makefile.am  configure.ac  xorg-x11-misc-arm-common.manifest  xorg-x11-misc-common.manifest  xorg-x11-misc-emulfb.manifest  xorg-x11-misc-i386-common.manifest
arm-common/: Xmodmap  startx.in  xinitrc  xresources  xsetrc
arm-common/arch-preinit.d/: arm-pvr
arm-emulfb/xorg.conf.d.default/: display.conf  input.conf
common/: startx  xinitrc  xresources
conf-arm-emulfb/: display.conf
conf-arm-emulfb-mobile/: input.conf
conf-arm-emulfb-wearable/: input.conf
conf-i386-emulfb/: display.conf  input.conf
conf-i386-emulfb-mobile/: display.conf  input.conf
conf-i386-emulfb-wearable/: display.conf  input.conf  input.conf.wc1
debian/: changelog  control  copyright  dirs  rules  rules.org  xserver-xorg-misc-s5pc110.install.in  xserver-xorg-misc-s5pc110.postinst.in
i386-common/: Xmodmap  startx  startx.in  xinitrc  xorg.conf  xorg.service  xresources  xresources.service  xserver  xsetrc
packaging/: xorg-x11-misc.spec  xorg-x11-server-misc.changes  xorg-x11-server-misc.spec
